notification implementation and junit update