@@ -3,19 +3,23 @@ package it.gov.pagopa.register.controller.operation;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import it.gov.pagopa.register.dto.operation.ProductDTO;
 import it.gov.pagopa.register.dto.operation.ProductListDTO;
+import it.gov.pagopa.register.dto.operation.ProductUpdateStatusRequestDTO;
+import it.gov.pagopa.register.enums.ProductStatusEnum;
 import it.gov.pagopa.register.service.operation.ProductService;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 
 import java.util.Collections;
+import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
@@ -49,7 +53,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
         .totalPages(1)
         .build();
 
-      Mockito.when(productService.getProducts(eq("organizationIdTest")
+      when(productService.getProducts(eq("organizationIdTest")
           , any()
           , any()
           , any()
@@ -80,7 +84,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
     //Test in caso di eccezione
     @Test
     void testGetProducts_ServiceThrowsException() throws Exception {
-      Mockito.when(productService.getProducts(eq("organizationIdTest")
+      when(productService.getProducts(eq("organizationIdTest")
           , any()
           , any()
           , any()
@@ -97,6 +101,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
     @Test
     void testUpdateProductStatuses_Success() throws Exception {
+
       ProductListDTO mockResponse = ProductListDTO.builder()
         .content(Collections.emptyList())
         .pageNo(0)
@@ -105,18 +110,21 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
         .totalPages(1)
         .build();
 
-      Mockito.when(productService.updateProductState(
-          eq("org-test"),
-          eq(Collections.singletonList("prod-1")),
-          eq(it.gov.pagopa.register.enums.ProductStatusEnum.APPROVED)))
-        .thenReturn(mockResponse);
 
-      String requestBody = objectMapper.writeValueAsString(
-        new it.gov.pagopa.register.dto.operation.ProductUpdateStatusRequestDTO(
-          Collections.singletonList("prod-1"),
-          it.gov.pagopa.register.enums.ProductStatusEnum.APPROVED
-        )
-      );
+      List<String> productIds = List.of("prod-1", "prod-2");
+      ProductUpdateStatusRequestDTO requestDTO = new ProductUpdateStatusRequestDTO();
+      requestDTO.setProductIds(productIds);
+      requestDTO.setStatus(ProductStatusEnum.APPROVED);
+      requestDTO.setMotivation("Valid reason");
+
+      String requestBody = objectMapper.writeValueAsString(requestDTO);
+
+      when(productService.updateProductState(
+        "org-test",
+        productIds,
+        ProductStatusEnum.APPROVED,
+        "Valid reason"
+      )).thenReturn(mockResponse);
 
       mockMvc.perform(
           org.springframework.test.web.servlet.request.MockMvcRequestBuilders
@@ -129,47 +137,23 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
     }
 
     @Test
-    void testUpdateProductStatuses_ServiceException() throws Exception {
-      Mockito.when(productService.updateProductState(
-          eq("org-test"),
-          any(),
-          any()))
-        .thenThrow(new RuntimeException("Unexpected"));
-
-      String requestBody = objectMapper.writeValueAsString(
-        new it.gov.pagopa.register.dto.operation.ProductUpdateStatusRequestDTO(
-          Collections.singletonList("prod-1"),
-          it.gov.pagopa.register.enums.ProductStatusEnum.REJECTED
-        )
-      );
-
-      mockMvc.perform(
-          org.springframework.test.web.servlet.request.MockMvcRequestBuilders
-            .patch("/idpay/register/products/update-status")
-            .header("x-organization-id", "org-test")
-            .contentType(MediaType.APPLICATION_JSON)
-            .content(requestBody))
-        .andExpect(status().isInternalServerError());
-    }
-
-    @Test
     void testUpdateProductStatuses_MissingHeader() throws Exception {
-      String requestBody = objectMapper.writeValueAsString(
-        new it.gov.pagopa.register.dto.operation.ProductUpdateStatusRequestDTO(
-          Collections.singletonList("prod-1"),
-          it.gov.pagopa.register.enums.ProductStatusEnum.IN_VALIDATION
-        )
-      );
+      ProductUpdateStatusRequestDTO requestDTO = new ProductUpdateStatusRequestDTO();
+      requestDTO.setProductIds(List.of("prod-1"));
+      requestDTO.setStatus(ProductStatusEnum.IN_VALIDATION);
+      requestDTO.setMotivation("Missing header test");
 
-      mockMvc.perform(
-          org.springframework.test.web.servlet.request.MockMvcRequestBuilders
-            .patch("/idpay/register/products/update-status")
-            .contentType(MediaType.APPLICATION_JSON)
-            .content(requestBody))
+      String requestBody = objectMapper.writeValueAsString(requestDTO);
+
+      mockMvc.perform(MockMvcRequestBuilders
+          .patch("/idpay/register/products/update-status")
+          .contentType(MediaType.APPLICATION_JSON)
+          .content(requestBody))
         .andExpect(status().isBadRequest());
     }
+}
 
 
-  }
+
 
 
